// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CentralBox /> should render a FramedBox tag 1`] = `
<CentralBox__FramedBox
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
/>
`;

exports[`<FramedBox /> should render its css w/ props theme 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding: 95px 30px 100px;
}

.c0 * {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (min-width:64.0625em) {
  .c0 {
    min-height: 480px;
    margin: 20px auto;
    background-color: rgb(255,255,255);
    border-radius: 20px 20px 48px 48px;
    box-shadow: 0 1px 2px rgba(0,0,0,0.3);
  }
}

@media (max-width:64em) {
  .c0 {
    height: 100%;
  }
}

<Div
  className="c0"
  theme={
    Object {
      "brand": "#00abe5",
    }
  }
/>
`;

exports[`<FramedBox /> should render its css w/ props unita 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding: 95px 30px 100px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 0;
  padding: 66px 30px 30px;
  color: rgb(255,255,255);
  text-align: center;
  background-color: #00BBEF;
}

.c0 h2 {
  padding: 0 30px 40px;
}

.c0 * {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (min-width:64.0625em) {
  .c0 {
    min-height: 480px;
    margin: 20px auto;
    background-color: #00BBEF;
    border-radius: 20px 20px 48px 48px;
    box-shadow: 0 1px 2px rgba(0,0,0,0.3);
    padding-bottom: 30px;
  }
}

@media (max-width:41.6875em) {
  .c0 h2 {
    padding: 0 20px 60px;
  }
}

@media (max-width:64em) {
  .c0 {
    height: 100%;
    overflow: auto;
  }
}

@media (max-width:30em) {
  .c0 {
    padding: 66px 10px 30px;
  }
}

@media (max-device-width:20em) {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
  }

  .c0 h2 {
    padding: 10px 0 20px;
  }
}

@media (max-width:64em) {
  .c0 {
    height: 100%;
  }
}

<Div
  className="c0"
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  unita={true}
/>
`;

exports[`<FramedBox /> should render its css w/ props versione 1`] = `
.c0 {
  position: relative;
  width: 100%;
  padding: 95px 30px 100px;
}

.c0 * {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@media (min-width:64.0625em) {
  .c0 {
    min-height: 480px;
    margin: 20px auto;
    background-color: rgb(255,255,255);
    border-radius: 3px;
    box-shadow: 0 1px 2px rgba(0,0,0,0.3);
  }
}

@media (max-width:64em) {
  .c0 {
    height: 100%;
  }
}

<Div
  className="c0"
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  versione="0"
/>
`;
